# installer

./: CMakeLists.txt  Messages.sh  README  RELEASE_NOTES.html  config-installer.h.cmake  installer.desktop  installer.kdev4  sync-transifex.sh  testGroups.sh
cmake/modules/: FindInstallerPartitionManager.cmake  FindLibPwquality.cmake
data/: CMakeLists.txt  cities.kml  configPageBundleData  netinstall.conf  postinstall.conf  timezones
scripts/: .gitignore  CMakeLists.txt  netinstall.sh.in  postinstall.sh.in  postremove.sh
scripts/postinstall-functions/: 01-job-initialize-target  02-job-configure-users  03-job-configure-sudoers  04-job-configure-pacman  05-job-pre-remove  06-job-pre-install  07-job-setup-xorg  08-job-download-l10n  09-job-create-fstab  10-job-add-extra-mountpoint  11-job-setup-hardware  12-job-create-initrd  13-job-regenerate-locales  14-job-create-localtime  15-job-set-keymap  16-job-set-hostname  17-job-cleanup-l10n  18-job-cleanup-drivers  19-job-cleanup-etc  20-job-install-grub2  helpers  init
src/: abstractpage.h  installationhandler.cpp  installationhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  pages.h  pmhandler.cpp  pmhandler.h
src/pages/: bootloaderpage.cpp  configpage.cpp  configpage.h  finishpage.cpp  installationpage.cpp  keyboardpage.cpp  keyboardpage.h  licensepage.cpp  localepage.cpp  localepage.h  netinstpage.cpp  netinstpage.h  partitionpage.cpp  partitionpage.h  readyinstallpage.cpp  releasenotespage.cpp  usercreationpage.cpp
src/widgets/: avatardialog.cpp  groupselectionwidget.cpp  groupselectionwidget.h  partitionwidget.cpp  progresswidget.cpp  progresswidget.h  userwidget.cpp  userwidget.h
src/widgets/kbpreview/: kbpreviewframe.cpp  kbpreviewframe.h  keyaliases.cpp  keyaliases.h  keyboardlayout.cpp  keyboardlayout.h  keysym2ucs.cpp  keysymbols.h  x11kbparser.cpp  x11kbparser.h
translations/: CMakeLists.txt  de.po  es.po  es_AR.po  fr.po  hr_HR.po  installer.pot  it.po  nl_BE.po  nl_NL.po  pt_BR.po  ru.po  tr_TR.po
ui/: installer.qrc  installer.qss
ui/pages/: base.ui  bootloader.ui  config.ui  finish.ui  init.ui  installation.ui  intro.ui  keyboard.ui  license.ui  locale.ui  netinst.ui  partition.ui  readyinstall.ui  releasenotes.ui  usercreation.ui
ui/widgets/: avatardialog.ui  groupselectionwidget.ui  userwidget.ui  userwidget.ui~
